; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk_dss.c_chunk_in_dss.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk_dss.c_chunk_in_dss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@have_dss = common dso_local global i32 0, align 4
@dss_mtx = common dso_local global i32 0, align 4
@dss_base = common dso_local global i64 0, align 8
@dss_max = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chunk_in_dss(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @have_dss, align 4
  %5 = call i32 @cassert(i32 %4)
  %6 = call i32 @malloc_mutex_lock(i32* @dss_mtx)
  %7 = load i8*, i8** %2, align 8
  %8 = ptrtoint i8* %7 to i64
  %9 = load i64, i64* @dss_base, align 8
  %10 = icmp uge i64 %8, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i8*, i8** %2, align 8
  %13 = ptrtoint i8* %12 to i64
  %14 = load i64, i64* @dss_max, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32 1, i32* %3, align 4
  br label %18

17:                                               ; preds = %11, %1
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %16
  %19 = call i32 @malloc_mutex_unlock(i32* @dss_mtx)
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @cassert(i32) #1

declare dso_local i32 @malloc_mutex_lock(i32*) #1

declare dso_local i32 @malloc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
